--- a/src/views/Home/Header/Header.css
+++ b/src/views/Home/Header/Header.css
@@ -3,3 +3,7 @@
     0 8px 10px 1px rgba(145, 158, 171, 0.14),
     0 3px 14px 2px rgba(145, 158, 171, 0.12);
 }
+
+.dropdown-toggle::after {
+    display: none !important; 
+}
