--- a/src/views/Home/Contacts/Modals/EditModal/EditModal.css
+++ b/src/views/Home/Contacts/Modals/EditModal/EditModal.css
@@ -5,3 +5,8 @@
 .active-tab {
   @apply border-l border-blue-500 text-blue-600 dark:border-green-500 dark:text-green-300;
 }
+
+.edit-input {
+  @apply px-2 py-2 appearance-none focus:outline-none  w-full bg-white border-2 border-gray-400/80 rounded-xl
+  focus:border-blue-500 dark:text-slate-200 text-slate-700 transition-colors duration-200;
+}
