--- a/src/views/Home/ContactDetails/ContactDetails.css
+++ b/src/views/Home/ContactDetails/ContactDetails.css
@@ -9,3 +9,7 @@
 .form-item select {
   @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
 }
+
+.form-date {
+  @apply appearance-none focus:outline-none w-full border-b-2 border-gray-400/80 focus:border-blue-500 dark:text-slate-200 text-slate-700 transition-colors duration-200;
+}
