--- a/src/views/Home/Contacts/Modals/CreateModal/CreateModal.css
+++ b/src/views/Home/Contacts/Modals/CreateModal/CreateModal.css
@@ -1,9 +1,9 @@
-.create-input {
-  @apply appearance-none focus:outline-none  w-full bg-transparent border-b-2 border-gray-400/80 focus:border-blue-500 dark:text-slate-200 text-slate-700 transition-colors duration-200;
-}
-.create-label {
-  @apply text-sm text-gray-600 dark:text-gray-400;
-}
-.create-item {
-  @apply flex flex-col gap-2;
-}
+/*.create-input {*/
+/*  @apply appearance-none focus:outline-none  w-full bg-transparent border-b-2 border-gray-400/80 focus:border-blue-500 dark:text-slate-200 text-slate-700 transition-colors duration-200;*/
+/*}*/
+/*.create-label {*/
+/*  @apply text-sm text-gray-600 dark:text-gray-400;*/
+/*}*/
+/*.create-item {*/
+/*  @apply flex flex-col gap-2;*/
+/*}*/
