--- a/src/views/Home/Contacts/Modals/EditModal/EditModal.css
+++ b/src/views/Home/Contacts/Modals/EditModal/EditModal.css
@@ -1,7 +1,7 @@
-.tab-button {
-  @apply text-slate-900 dark:text-slate-200 text-sm p-2 border-l border-transparent hover:border-l hover:border-blue-600 dark:hover:border-green-500 transition-all duration-150;
-}
+/*.tab-button {*/
+/*  @apply text-slate-900 dark:text-slate-200 text-sm p-2 border-l border-transparent hover:border-l hover:border-blue-600 dark:hover:border-green-500 transition-all duration-150;*/
+/*}*/
 
-.active-tab {
-  @apply border-l border-blue-500 text-blue-600 dark:border-green-500 dark:text-green-300;
-}
+/*.active-tab {*/
+/*  @apply border-l border-blue-500 text-blue-600 dark:border-green-500 dark:text-green-300;*/
+/*}*/
