--- a/src/views/Home/Header/Header.css
+++ b/src/views/Home/Header/Header.css
@@ -1,9 +1,11 @@
-.shadow-dropdown {
-    box-shadow: 0 5px 5px -3px rgba(145, 158, 171, 0.2),
-    0 8px 10px 1px rgba(145, 158, 171, 0.14),
-    0 3px 14px 2px rgba(145, 158, 171, 0.12);
+.dark{
+    @apply text-white
 }
 
-.dropdown-toggle::after {
-    display: none !important; 
+.notification-line{
+    @apply text-white
+}
+
+header{
+    @apply bg-white
 }
