--- a/src/views/Home/Contacts/ContactDetails/ContactDetails.css
+++ b/src/views/Home/Contacts/ContactDetails/ContactDetails.css
@@ -1,15 +1,15 @@
-/* .form-item {
-  @apply flex gap-2 items-center text-slate-900 dark:text-slate-300 whitespace-nowrap gap-4;
-} */
+.form-item {
+  @apply flex gap-4 items-center text-graydark dark:text-bodydark font-medium whitespace-nowrap;
+}
 
-/* .form-item input {
-  @apply appearance-none focus:outline-none  w-full bg-transparent border-b border-transparent focus:border-blue-500 dark:text-slate-50 text-slate-700 transition-colors duration-200;
+.form-item input {
+  @apply p-4  appearance-none focus:outline-none w-full bg-transparent border-b border-transparent focus:border-meta-5 dark:text-meta-2 text-graydark dark:hover:bg-graydark/50 transition-colors duration-200;
 }
 
 .form-item select {
-  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+  @apply bg-transparent border border-gray/50 text-graydark text-sm rounded-lg focus:ring-meta-5 focus:border-meta-5 block w-full p-2.5 dark:bg-gray dark:border-gray/50 dark:placeholder-gray/50 dark:text-white dark:focus:ring-meta-5 dark:focus:border-green300;
 }
 
 .form-date {
-  @apply appearance-none focus:outline-none w-full border-b-2 border-gray-400/80 focus:border-blue-500 dark:text-slate-200 text-slate-700 transition-colors duration-200;
-} */
+  @apply appearance-none focus:outline-none w-full border-b-2 border-gray/80 focus:border-meta-5 dark:text-whiten text-graydark transition-colors duration-200;
+}
