--- a/src/views/Home/Contacts/Modals/EditModal/EditModal.css
+++ b/src/views/Home/Contacts/Modals/EditModal/EditModal.css
@@ -1,21 +1,12 @@
-/*.tab-button {*/
-/*  @apply text-slate-900 dark:text-slate-200 text-sm p-2 border-l border-transparent hover:border-l hover:border-blue-600 dark:hover:border-green-500 transition-all duration-150;*/
-/*}*/
-
-/*.active-tab {*/
-/*  @apply border-l border-blue-500 text-blue-600 dark:border-green-500 dark:text-green-300;*/
-/*}*/
-/*main*/
-/*.tab-button {
-  @apply text-slate-900 dark:text-slate-200 text-sm p-2 border-l border-transparent hover:border-l hover:border-blue-600 dark:hover:border-green-500 transition-all duration-150;
+.tab-button {
+  @apply text-compdark dark:text-whiten text-sm p-2 border-l border-transparent hover:border-l hover:border-meta-5 hover:text-meta-5 dark:hover:border-green300 dark:hover:text-green300 transition-all duration-150;
 }
 
 .active-tab {
-  @apply border-l border-blue-500 text-blue-600 dark:border-green-500 dark:text-green-300;
+  @apply border-l border-meta-5 text-meta-5 dark:border-green300 dark:text-green300;
 }
 
 .edit-input {
-  @apply px-2 py-2 appearance-none focus:outline-none  w-full bg-white border-2 border-gray-400/80 rounded-xl
-  focus:border-blue-500 dark:text-slate-200 text-slate-700 transition-colors duration-200;
+  @apply px-2 py-2 appearance-none focus:outline-none  w-full bg-transparent border-2 border-gray/50 rounded-xl
+  focus:border-meta-5 dark:text-whiten text-compdark transition-colors duration-200;
 }
-*/
