--- a/src/views/Home/Contacts/Modals/EditModal/EditModal.css
+++ b/src/views/Home/Contacts/Modals/EditModal/EditModal.css
@@ -10,3 +10,23 @@
   @apply px-2 py-2 appearance-none focus:outline-none  w-full bg-transparent border-2 border-gray/50 rounded-xl
   focus:border-meta-5 dark:text-whiten text-compdark transition-colors duration-200;
 }
+
+/* Hide the default scrollbar */
+::-webkit-scrollbar {
+  @apply w-2;
+}
+
+/* Customize the scrollbar track */
+::-webkit-scrollbar-track {
+  @apply bg-gray/20 /* Background color of the track */;
+}
+
+/* Customize the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  @apply bg-gray/50 rounded; /* Background color of the thumb */
+}
+
+/* On hover, customize the scrollbar thumb */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray/90;
+}
